--- a/LibraryApp/appsettings.json
+++ b/LibraryApp/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CS": "Server=(local);Database=Library;Integrated security=True;Encrypt=False;TrustServerCertificate=False;"
+
+  }
 }
