--- a/LibraryApp/appsettings.json
+++ b/LibraryApp/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CS": "Server=(local);Database=Library;Integrated security=True;Encrypt=False;TrustServerCertificate=False;"
+    "CS": "Server=.;Database=Library;Integrated security=True;Encrypt=False;TrustServerCertificate=False;"
 
   }
 }
